# jacobi-svd-cuda

./: .gitignore  CMakeLists.txt  STRUCTURE.md
include/: io.hpp  kernels.hpp  pipeline.hpp
src/: io.cpp  io.cu  kernels.cu  main.cpp  pipeline.cpp
tex/: .gitignore  README.md  latexmkrc  main.tex  preamble.tex
tex/sections/: 01-what-is-svd.tex  02-one-sided-jacobi-svd.tex  03-gpu-parallel-reduction.tex  04-memory-mapped-streaming.tex  04-system-boundary-pure-kernel.tex  05-memory-mapped-streaming.tex  05-pipeline-producer-consumer.tex  06-cli-presentation-layer.tex  06-pipeline-producer-consumer.tex  07-cli-presentation-layer.tex  07-cmake-build-system.tex  08-cmake-build-system.tex
tex/tables/: cli-command-surface.tex
